@@ -1,5 +1,6 @@
 package com.battlearena.auth_service.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -15,110 +16,62 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
-/**
- * Spring Security configuration for Auth Service.
- *
- * <p>
- * This configuration sets up security policies, CORS, and password encoding.
- * </p>
- */
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-    /**
-     * Configures security filter chain.
-     *
-     * <p>
-     * Allows public access to:
-     * - /actuator/health (for health checks)
-     * - /api/auth/** (authentication endpoints)
-     * - /swagger-ui/** and /api-docs/** (Swagger documentation)
-     * </p>
-     *
-     * @param http HttpSecurity builder
-     * @return SecurityFilterChain
-     * @throws Exception if configuration fails
-     */
+    @Value("${cors.allowed-origins:*}")
+    private String allowedOrigins;
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder(12); // 12 rounds for high security
+    }
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            // Enable CSRF protection, but ignore stateless API endpoints
-            // CSRF is not needed for stateless JWT-based API authentication
-            .csrf(csrf -> csrf.ignoringRequestMatchers("/api/auth/**"))
-
-            // CORS configuration
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
-            // Stateless session (JWT-based authentication)
-            .sessionManagement(session ->
-                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-
-            // Configure request authorization
-            .authorizeHttpRequests(auth -> auth
-                // Allow actuator health check (required for Docker health checks)
-                .requestMatchers("/actuator/health").permitAll()
-
-                // Allow auth endpoints (registration, login)
-                .requestMatchers("/api/auth/**").permitAll()
-
-                // Allow Swagger documentation
-                .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/api-docs/**").permitAll()
-
-                // All other requests require authentication (for future implementation)
-                .anyRequest().authenticated()
-            );
+                // Enable CSRF protection, but ignore stateless API endpoints
+                // CSRF is not needed for stateless JWT-based API authentication
+                .csrf(csrf -> csrf.ignoringRequestMatchers("/api/auth/**", "/actuator/**"))
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .sessionManagement(
+                        session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(auth -> auth.requestMatchers("/api/auth/**").permitAll() // Allow
+                                                                                                // public
+                                                                                                // access
+                                                                                                // to
+                                                                                                // auth
+                                                                                                // endpoints
+                        .requestMatchers("/actuator/health").permitAll() // Allow health check
+                        .anyRequest().authenticated() // All other requests require authentication
+                );
 
         return http.build();
     }
 
-    /**
-     * Configures CORS (Cross-Origin Resource Sharing).
-     *
-     * <p>
-     * Allows requests from any origin (for development).
-     * In production, restrict to specific origins.
-     * </p>
-     *
-     * @return CorsConfigurationSource
-     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // Allow all origins (for development - restrict in production)
-        configuration.setAllowedOrigins(List.of("*"));
+        // Parse allowed origins (support comma-separated values or "*")
+        if ("*".equals(allowedOrigins)) {
+            configuration.setAllowedOriginPatterns(List.of("*"));
+        } else {
+            List<String> origins = Arrays.asList(allowedOrigins.split(","));
+            configuration.setAllowedOrigins(origins);
+        }
 
-        // Allowed HTTP methods
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-
-        // Allowed headers
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
-
-        // Allow credentials
+        configuration.setAllowedMethods(
+                Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true);
-
-        // Cache preflight requests for 24 hours
-        configuration.setMaxAge(86400L);
+        configuration.setMaxAge(3600L); // Cache preflight requests for 1 hour
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
 
         return source;
-    }
-
-    /**
-     * Password encoder bean for hashing passwords.
-     *
-     * <p>
-     * Uses BCrypt with default strength (10 rounds).
-     * </p>
-     *
-     * @return PasswordEncoder implementation
-     */
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
     }
 }
 
