@@ -1,5 +1,8 @@
 package com.battlearena.leaderboard_service.config;
 
+import java.util.Arrays;
+import java.util.List;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -9,9 +12,6 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
-import java.util.Arrays;
-import java.util.List;
 
 /**
  * Spring Security configuration for Leaderboard Service.
@@ -24,86 +24,85 @@ import java.util.List;
 @EnableWebSecurity
 public class SecurityConfig {
 
-    /**
-     * Configures security filter chain.
-     *
-     * <p>
-     * Allows public access to: - /actuator/health (for health checks) - /api/leaderboard/**
-     * (leaderboard endpoints - will require auth later) - /swagger-ui/** and /api-docs/** (Swagger
-     * documentation)
-     * </p>
-     *
-     * @param http HttpSecurity builder
-     * @return SecurityFilterChain
-     * @throws Exception if configuration fails
-     */
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-                // Enable CSRF protection, but ignore stateless API endpoints
-                // CSRF is not needed for stateless JWT-based API authentication
-                .csrf(csrf -> csrf.ignoringRequestMatchers("/api/leaderboard/**"))
+        /**
+         * Configures security filter chain.
+         *
+         * <p>
+         * Allows public access to: - /actuator/health (for health checks) - /api/leaderboard/**
+         * (leaderboard endpoints - will require auth later)
+         * </p>
+         *
+         * @param http HttpSecurity builder
+         * @return SecurityFilterChain
+         * @throws Exception if configuration fails
+         */
+        @Bean
+        public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+                http
+                                // Enable CSRF protection, but ignore stateless API endpoints
+                                // CSRF is not needed for stateless JWT-based API authentication
+                                .csrf(csrf -> csrf.ignoringRequestMatchers("/api/leaderboard/**",
+                                                "/actuator/**"))
 
-                // CORS configuration
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                                // CORS configuration
+                                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
 
-                // Stateless session (JWT-based authentication)
-                .sessionManagement(
-                        session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                                // Stateless session (JWT-based authentication)
+                                .sessionManagement(session -> session.sessionCreationPolicy(
+                                                SessionCreationPolicy.STATELESS))
 
-                // Configure request authorization
-                .authorizeHttpRequests(auth -> auth
-                        // Allow actuator health check (required for Docker health checks)
-                        .requestMatchers("/actuator/health").permitAll()
+                                // Configure request authorization
+                                .authorizeHttpRequests(auth -> auth
+                                                // Allow actuator health check (required for Docker
+                                                // health checks)
+                                                .requestMatchers("/actuator/health").permitAll()
 
-                        // Allow leaderboard endpoints (will require auth later)
-                        .requestMatchers("/api/leaderboard/**").permitAll()
+                                                // Allow leaderboard endpoints (will require auth
+                                                // later)
+                                                .requestMatchers("/api/leaderboard/**").permitAll()
 
-                        // Allow Swagger documentation
-                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/api-docs/**")
-                        .permitAll()
+                                                // All other requests require authentication (for
+                                                // future implementation)
+                                                .anyRequest().authenticated());
 
-                        // All other requests require authentication (for future implementation)
-                        .anyRequest().authenticated());
+                return http.build();
+        }
 
-        return http.build();
-    }
+        /**
+         * Configures CORS (Cross-Origin Resource Sharing).
+         *
+         * <p>
+         * Allows requests from any origin (for development). In production, restrict to specific
+         * origins.
+         * </p>
+         *
+         * @return CorsConfigurationSource
+         */
+        @Bean
+        public CorsConfigurationSource corsConfigurationSource() {
+                CorsConfiguration configuration = new CorsConfiguration();
 
-    /**
-     * Configures CORS (Cross-Origin Resource Sharing).
-     *
-     * <p>
-     * Allows requests from any origin (for development). In production, restrict to specific
-     * origins.
-     * </p>
-     *
-     * @return CorsConfigurationSource
-     */
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
+                // Allow all origins (for development - restrict in production)
+                configuration.setAllowedOrigins(List.of("*"));
 
-        // Allow all origins (for development - restrict in production)
-        configuration.setAllowedOrigins(List.of("*"));
+                // Allowed HTTP methods
+                configuration.setAllowedMethods(
+                                Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
 
-        // Allowed HTTP methods
-        configuration.setAllowedMethods(
-                Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+                // Allowed headers
+                configuration.setAllowedHeaders(
+                                Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
 
-        // Allowed headers
-        configuration.setAllowedHeaders(
-                Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
+                // Allow credentials
+                configuration.setAllowCredentials(true);
 
-        // Allow credentials
-        configuration.setAllowCredentials(true);
+                // Cache preflight requests for 24 hours
+                configuration.setMaxAge(86400L);
 
-        // Cache preflight requests for 24 hours
-        configuration.setMaxAge(86400L);
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                source.registerCorsConfiguration("/**", configuration);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-
-        return source;
-    }
+                return source;
+        }
 }
 
